# webgpu_stu

./: Cargo.toml  README.md
compute_particle/: Cargo.toml
compute_particle/src/: app.rs  lib.rs
compute_particle/src/wgsls/: compute.wgsl  compute_init.wgsl  shader.wgsl
copy_texture_to_texture/: Cargo.toml
copy_texture_to_texture/src/: app.rs  lib.rs  main.rs  vertex.rs
copy_texture_to_texture/src/shaders/: texture.wgsl  vertex.wgsl
index_buffer/: Cargo.toml
index_buffer/src/: app.rs  lib.rs  main.rs
index_buffer/src/wgsls/: shader.wgsl
render/: Cargo.toml
render/assets/wgsls/: demo.wgsl
render/examples/: demo.rs
render/src/: lib.rs  main.rs
render/src/render/: mesh.rs  mod.rs
render/src/wgsls/: shader.wgsl
render_to_image/: Cargo.toml
render_to_image/assets/: compute_gauss.wgsl
render_to_image/examples/: computer_demo.rs  computer_gauss.rs
render_to_image/src/: backend.rs  image_utils.rs  lib.rs  main.rs  render.rs  shader.wgsl
shader_transform/: Cargo.toml
shader_transform/src/: app.rs  lib.rs
shader_transform/src/wgsls/: shader.wgsl
texture/: Cargo.toml
texture/src/: app.rs  lib.rs
texture/src/wgsls/: shader.wgsl
transform/: Cargo.toml
transform/examples/: demo.rs
transform/src/: app.rs  lib.rs
transform/src/wgsls/: shader.wgsl
vertex_buffer/: Cargo.toml
vertex_buffer/src/: app.rs  lib.rs
vertex_buffer/src/wgsls/: shader.wgsl
window/: Cargo.toml
window/src/: lib.rs
