[workspace]
members = [
    "copy_texture_to_texture",
    "index_buffer",
    "render",
    "shader_transform",
    "texture",
    "transform",
    "vertex_buffer",
    "render_to_image", "compute_particle",
]
resolver = "2"

[workspace.dependencies]
wgpu = "28"
winit = "0.30"
anyhow = "1.0"
tokio = "1"
futures = "0.3"
glam = "0.29.0"

bytemuck = { version = "1.22.0", features = ["derive"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
