[package]
name = "texture"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }

image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }